@@ -1,5 +1,10 @@
 2006-12-12  Akim Demaille  <demaille@gostai.com>
 
+	Formatting changes
+	* src/uexpression.cc: Also, reduce some scopes.
+
+2006-12-12  Akim Demaille  <demaille@gostai.com>
+
 	Remove unused attribute
 	* src/ucommand.hh (hmi): Remove.
 
